--- a/movie-app/src/component/MovieCart/movieCart.css
+++ b/movie-app/src/component/MovieCart/movieCart.css
@@ -81,8 +81,9 @@ body{
 }
 
 .footer .stars{
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
+    margin: 10px;
 }
 
 .footer .star-dis{
@@ -99,11 +100,18 @@ body{
     left: 50;
 }
 
+.inc-dec{
+    height: 20px;
+    width: 20px;
+}
+
+
+
 .footer button{
     font-size: 15px;
     padding: 7px, 10px;
     text-shadow: none;
-    border-radius: 2px;
+    border-radius: 7px;
     border: none;
     font-weight: 600;
     margin: 5px;
@@ -111,16 +119,17 @@ body{
 
 
 .fav-btn{
-    background-color: #bc16dd;
-    color: #fff;
+    background-color: #efa0ff;
+    /* color: #fff; */
 }
 
 .cart-btn{
-    background-color: rgb(178, 255, 178);
+    background-color: #cbe2f5;
 }
 
 
-  button:hover {
-    border-color: #dbc7d3;
-  }
+button:hover {
+    border-color: black;
+    background-color: rgb(178, 255, 178);
+}
   
